<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:background="@drawable/background"
    android:layout_height="match_parent"
    tools:context="com.example.MilanJwellers.activity.MainActivity2">
    <!-- display two Button's and a FrameLayout to replace the Fragment's  -->


    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout3"
        android:layout_width="409dp"
        android:layout_height="237dp"
        android:layout_marginBottom="21dp"
        android:layout_marginTop="120dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/img_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.453"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.671" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="407dp"
        android:layout_height="474dp"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="1.0">

        <EditText
            android:id="@+id/edt_name"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:paddingLeft="10dp"
            android:layout_marginRight="10dp"

            android:background="@drawable/textbg"
            android:ems="10"
            android:textAlignment="center"
            android:inputType="textPersonName"
            android:hint="@string/Name"
            android:gravity="center_horizontal" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/textbg"
            android:ems="10"
            android:gravity="center_horizontal"
            android:inputType="textPersonName"
            android:hint="@string/Email"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/edt_number"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/textbg"
            android:ems="10"
            android:gravity="center_horizontal"
            android:inputType="textPersonName"
            android:hint="@string/Number"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/edt_pswd1"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/textbg"
            android:ems="10"
            android:hint="@string/Password"
            android:textAlignment="center"
            android:inputType="textPassword"
            android:gravity="center_horizontal" />

        <EditText
            android:id="@+id/edt_pswd2"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/textbg"
            android:ems="10"
            android:textAlignment="center"
            android:hint="@string/Confirm"
            android:inputType="textPassword"
            android:gravity="center_horizontal" />

        <ImageButton
            android:id="@+id/btn_create"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/register" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
