<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:background="@drawable/background"
    android:layout_height="match_parent"
    tools:context="com.example.MilanJwellers.activity.MainActivity2">
    <!-- display two Button's and a FrameLayout to replace the Fragment's  -->


    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginBottom="21dp"
        android:layout_marginTop="120dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/img_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.55" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="407dp"
        android:layout_height="474dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="1.0">

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:ems="10"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:background="@drawable/txtbg"
            android:textAlignment="center"
            android:inputType="textPersonName"
            android:hint="@string/Email"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="60dp"
            android:textColorHint="@color/black"
            android:gravity="center_horizontal" />

        <EditText
            android:id="@+id/edt_psw"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:background="@drawable/txtbg"
            android:textColorHint="@color/black"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:textAlignment="center"
            android:hint="@string/Password"

            android:gravity="center_horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="20dp">
            <ImageButton
                android:id="@+id/btn_login"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@drawable/login"
                android:layout_gravity="center_horizontal" />

            <ImageButton
                android:id="@+id/btn_create"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/signin"
                android:text="CREATE ACCOUNT" />

        </LinearLayout>


        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/txt_forgotpswd"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:ems="10"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textColor="@color/gray"
            android:text="@string/forgot"
            android:inputType="textEmailAddress"
            android:gravity="center_horizontal" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
